--- a/2026W/C.html
+++ b/2026W/C.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="font-size: 10.0882px;"><head>
+<html style="font-size: 9.97059px;"><head>
     <link rel="icon" href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2220 0 100 100%22&gt;&lt;text y=%22.8em%22 font-size=%22100%22&gt;📊&lt;/text&gt;&lt;/svg&gt;">
     <meta charset="utf-8">
     <title id="h0">MP5PUBG: Room C 结果</title>
@@ -1085,7 +1085,28 @@ td.rank{
     <div class="picker scroll"><span class="scroll-text-picker">Creap</span></div>
 </div>
 <div class="song-title scroll"><span class="scroll-text">Chocolate</span></div>
-<div class="mods"><div class="fixed"><i class="NM"></i></div><div class="award"><i class="HR"></i></div></div></td><td class="round"><div class="logo">⚖️</div><div class="text">Round</div><div class="number">4</div></td></tr><tr class="player"><td class="rank"><div class="rank-1">1</div></td><td class="username"><img src="https://a.ppy.sh/9641731" alt="SparkNights">
+<div class="mods"><div class="fixed"><i class="NM"></i></div><div class="award"><i class="HR"></i></div></div></td><td class="game" style="background-image: url(&quot;https://assets.ppy.sh/beatmaps/1929593/covers/list.jpg&quot;);">
+<div class="round-game">4 - 3</div>
+<div class="pick">
+    <div class="by">by</div>
+    <div class="picker scroll"><span class="scroll-text-picker">KentoKanami</span></div>
+</div>
+<div class="song-title scroll"><span class="scroll-text">最果ての勇者にラブソングを</span></div>
+<div class="mods"><div class="fixed"><i class="NM"></i></div><div class="award"><i class="EZ"></i></div></div></td><td class="round"><div class="logo">⚖️</div><div class="text">Round</div><div class="number">4</div></td><td class="game" style="background-image: url(&quot;https://assets.ppy.sh/beatmaps/1145452/covers/list.jpg&quot;);">
+<div class="round-game">5 - 1</div>
+<div class="pick">
+    <div class="by">by</div>
+    <div class="picker scroll"><span class="scroll-text-picker">-Hokusai-</span></div>
+</div>
+<div class="song-title scroll"><span class="scroll-text">Spelunker</span></div>
+<div class="mods"><div class="fixed"><i class="NM"></i></div><div class="award"><i class="EZ"></i><i class="HD"></i></div></div></td><td class="game" style="background-image: url(&quot;https://assets.ppy.sh/beatmaps/83560/covers/list.jpg&quot;);">
+<div class="round-game">5 - 2</div>
+<div class="pick">
+    <div class="by">by</div>
+    <div class="picker scroll"><span class="scroll-text-picker">主办 (1)</span></div>
+</div>
+<div class="song-title scroll"><span class="scroll-text">T-T-Techno (feat. Jesskah)</span></div>
+<div class="mods"><div class="fixed"><i class="NM"></i></div><div class="award"><i class="HD"></i></div></div></td><td class="round"><div class="logo">⚖️</div><div class="text">Round</div><div class="number">5</div></td></tr><tr class="player"><td class="rank"><div class="rank-1">1</div></td><td class="username"><img src="https://a.ppy.sh/9641731" alt="SparkNights">
 <div class="scroll"><span class="scroll-text">SparkNights</span></div></td><td class="game">
 <div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">80</div></div>
 <div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
@@ -1131,9 +1152,20 @@ td.rank{
 <div class="score">173,250</div></td><td class="game">
 <div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">33</div></div>
 <div class="award-mods"><div class="award"></div><div class="mods"><i class="NM"></i></div></div>
-<div class="score">626,583</div></td><td class="round">
-<div class="logo going">🔥</div>
-<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">997</div></div></td></tr><tr class="player"><td class="rank"><div class="rank-2">2</div></td><td class="username"><img src="https://a.ppy.sh/17027628" alt="shuaiyue">
+<div class="score">626,583</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">33</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="NM"></i></div></div>
+<div class="score">63,531</div></td><td class="round">
+<div class="logo pass">▶️</div>
+<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">1030</div></div></td><td class="game">
+<div class="rank-points"><div class="rank rank-2"># 2</div><div class="points">0</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i><i class="HR"></i></div></div>
+<div class="score">190,067</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="HD"></i></div></div>
+<div class="score">377,583</div></td><td class="round">
+<div class="logo champion">🏆</div>
+<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">1130</div></div></td></tr><tr class="player"><td class="rank"><div class="rank-2">2</div></td><td class="username"><img src="https://a.ppy.sh/17027628" alt="shuaiyue">
 <div class="scroll"><span class="scroll-text">shuaiyue</span></div></td><td class="game">
 <div class="rank-points"><div class="rank rank-2"># 2</div><div class="points">90</div></div>
 <div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
@@ -1179,57 +1211,20 @@ td.rank{
 <div class="score">216,807</div></td><td class="game">
 <div class="rank-points"><div class="rank rank-2"># 2</div><div class="points">67</div></div>
 <div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="HR"></i></div></div>
-<div class="score">686,495</div></td><td class="round">
-<div class="logo going">🔥</div>
-<div class="rank-points"><div class="rank rank-2"># 2</div><div class="points">961</div></div></td></tr><tr class="player"><td class="rank"><div class="rank-3">3</div></td><td class="username"><img src="https://a.ppy.sh/17908675" alt="-Hokusai-">
-<div class="scroll"><span class="scroll-text">-Hokusai-</span></div></td><td class="game">
-<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
-<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
-<div class="score">222,668</div></td><td class="game">
-<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">80</div></div>
-<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
-<div class="score">294,527</div></td><td class="game">
-<div class="rank-points"><div class="rank rank-9"># 9</div><div class="points">20</div></div>
-<div class="award-mods"><div class="award"></div><div class="mods"><i class="DT"></i><i class="HD"></i></div></div>
-<div class="score">92,855</div></td><td class="game">
-<div class="rank-points"><div class="rank rank-7"># 7</div><div class="points">40</div></div>
-<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
-<div class="score">305,249</div></td><td class="round">
+<div class="score">686,495</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-2"># 2</div><div class="points">67</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="NM"></i></div></div>
+<div class="score">71,292</div></td><td class="round">
 <div class="logo pass">▶️</div>
-<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">240</div></div></td><td class="game">
-<div class="rank-points"><div class="rank rank-9"># 9</div><div class="points">0</div></div>
-<div class="award-mods"><div class="award"></div><div class="mods"><i class="DT"></i><i class="HD"></i></div></div>
-<div class="score">12,956</div></td><td class="game">
-<div class="rank-points"><div class="rank rank-6"># 6</div><div class="points">38</div></div>
-<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="EZ"></i></div></div>
-<div class="score">547,931</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-2"># 2</div><div class="points">1028</div></div></td><td class="game">
 <div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
-<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="DT"></i><i class="HD"></i></div></div>
-<div class="score">1,396,390</div></td><td class="game">
-<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">75</div></div>
-<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
-<div class="score">545,760</div></td><td class="round">
-<div class="logo pass">▶️</div>
-<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">453</div></div></td><td class="game">
-<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
-<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
-<div class="score">199,188</div></td><td class="game">
-<div class="rank-points"><div class="rank rank-5"># 5</div><div class="points">20</div></div>
-<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
-<div class="score">434,823</div></td><td class="game">
-<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">40</div></div>
-<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="DT"></i><i class="HD"></i></div></div>
-<div class="score">398,080</div></td><td class="round">
-<div class="logo pass">▶️</div>
-<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">613</div></div></td><td class="game">
-<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
-<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
-<div class="score">241,985</div></td><td class="game">
-<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">0</div></div>
-<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
-<div class="score">447,009</div></td><td class="round">
-<div class="logo going">🔥</div>
-<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">713</div></div></td></tr><tr class="player"><td class="rank"><div class="rank-4">4</div></td><td class="username"><img src="https://a.ppy.sh/33214747" alt="KentoKanami">
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="HR"></i></div></div>
+<div class="score">202,259</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-2"># 2</div><div class="points">0</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="HD"></i></div></div>
+<div class="score">365,017</div></td><td class="round">
+<div class="logo award">🏅</div>
+<div class="rank-points"><div class="rank rank-2"># 2</div><div class="points">1128</div></div></td></tr><tr class="player eliminate"><td class="rank"><div class="rank-3">3</div></td><td class="username"><img src="https://a.ppy.sh/33214747" alt="KentoKanami">
 <div class="scroll"><span class="scroll-text">KentoKanami</span></div></td><td class="game">
 <div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">70</div></div>
 <div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
@@ -1275,9 +1270,63 @@ td.rank{
 <div class="score">144,263</div></td><td class="game">
 <div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
 <div class="award-mods"><div class="award"></div><div class="mods"><i class="NM"></i></div></div>
-<div class="score">929,700</div></td><td class="round">
-<div class="logo going">🔥</div>
-<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">703</div></div></td></tr><tr class="player eliminate"><td class="rank"><div class="rank-5">5</div></td><td class="username"><img src="https://a.ppy.sh/33697130" alt="ll993675730">
+<div class="score">929,700</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="EZ"></i></div></div>
+<div class="score">78,399</div></td><td class="round">
+<div class="logo eliminate">☠️</div>
+<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">803</div></div></td></tr><tr class="player eliminate"><td class="rank"><div class="rank-4">4</div></td><td class="username"><img src="https://a.ppy.sh/17908675" alt="-Hokusai-">
+<div class="scroll"><span class="scroll-text">-Hokusai-</span></div></td><td class="game">
+<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
+<div class="score">222,668</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">80</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
+<div class="score">294,527</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-9"># 9</div><div class="points">20</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="DT"></i><i class="HD"></i></div></div>
+<div class="score">92,855</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-7"># 7</div><div class="points">40</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
+<div class="score">305,249</div></td><td class="round">
+<div class="logo pass">▶️</div>
+<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">240</div></div></td><td class="game">
+<div class="rank-points"><div class="rank rank-9"># 9</div><div class="points">0</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="DT"></i><i class="HD"></i></div></div>
+<div class="score">12,956</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-6"># 6</div><div class="points">38</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="EZ"></i></div></div>
+<div class="score">547,931</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="DT"></i><i class="HD"></i></div></div>
+<div class="score">1,396,390</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">75</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
+<div class="score">545,760</div></td><td class="round">
+<div class="logo pass">▶️</div>
+<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">453</div></div></td><td class="game">
+<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
+<div class="score">199,188</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-5"># 5</div><div class="points">20</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
+<div class="score">434,823</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">40</div></div>
+<div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="DT"></i><i class="HD"></i></div></div>
+<div class="score">398,080</div></td><td class="round">
+<div class="logo pass">▶️</div>
+<div class="rank-points"><div class="rank rank-3"># 3</div><div class="points">613</div></div></td><td class="game">
+<div class="rank-points"><div class="rank rank-1"># 1</div><div class="points">100</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
+<div class="score">241,985</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">0</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
+<div class="score">447,009</div></td><td class="game">
+<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">0</div></div>
+<div class="award-mods"><div class="award"></div><div class="mods"><i class="HD"></i></div></div>
+<div class="score">55,690</div></td><td class="round">
+<div class="logo eliminate">☠️</div>
+<div class="rank-points"><div class="rank rank-4"># 4</div><div class="points">713</div></div></td></tr><tr class="player eliminate"><td class="rank"><div class="rank-5">5</div></td><td class="username"><img src="https://a.ppy.sh/33697130" alt="ll993675730">
 <div class="scroll"><span class="scroll-text">ll993675730</span></div></td><td class="game">
 <div class="rank-points"><div class="rank rank-5"># 5</div><div class="points">60</div></div>
 <div class="award-mods"><div class="award">⭐</div><div class="mods"><i class="NM"></i></div></div>
